force-app/main/default/objects/Cloudrop__ContainerID__c/Cloudrop__ContainerID__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used in javascript to fetch Id&apos;s of public and private containers</description>
    <label>ContainerID</label>
</CustomObject>