force-app/main/default/objects/Cloudrop__ContainerID__c/fields/Cloudrop__ContainerName__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__ContainerName__c</fullName>
    <label>ContainerName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>