force-app/main/default/objects/Cloudrop__ContainerID__c/fields/Cloudrop__Iscompleted__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Iscompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Iscompleted</label>
    <type>Checkbox</type>
</CustomField>