force-app/main/default/objects/Cloudrop__ContainerID__c/fields/Cloudrop__PrivateContainerName__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__PrivateContainerName__c</fullName>
    <label>PrivateContainerName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>